#124 Fixing picture section on mobile.

--- a/themes/main/src/sass/_includes/fonts.scss
+++ b/themes/main/src/sass/_includes/fonts.scss
@@ -32,6 +32,15 @@
     font-size: 1.1em;
   }
 
+  .picture figcaption .title {
+    font-size: 0.9em;
+  }
+
+  .picture figcaption .credits {
+    font-size: 0.8em;
+    font-weight: 400;
+  }
+
 }
 
 @mixin __post(){
