--- a/themes/main/src/sass/nacional.scss
+++ b/themes/main/src/sass/nacional.scss
@@ -10,7 +10,6 @@
 
 #home {
   width: 100%;
-  padding: 10px;
   display: inline-block;
   margin-top: 40px;
 
@@ -26,6 +25,7 @@
 }
 
 #home .featured {
+  padding: 0px 10px;
   width: 95%;
   display: inline-block;
   margin-top: 10px;
@@ -102,11 +102,13 @@
   border-bottom: 1px solid $gray-light;
   flex-flow: row wrap;
   display: flex;
-  padding: 20px 0;
+  -webkit-justify-content:         space-around;
+  justify-content:         space-around;
+  padding: 20px 0px;
 
   article{
     width: 45%;
-    padding: 5px;
+    max-width: 250px;
   }
 
   .hat{
@@ -182,21 +184,35 @@
 }
 
 #home .picture {
-    background-color: rgba(241,242,243,1);
-    position: relative;
-    z-index: -1;
+    background-color: $gray-medium;
+    border-top: 1px solid $gray-light;
+    border-bottom: 1px solid $gray-light;
+    padding: 20px 0;
     width: 100%;
-    padding: 5px;
+
+    figure {
+      margin: 0 auto;
+      width: 90%;
+      max-width: 360px;
+      position: relative;
+    }
+
+    figcaption {
+      position: absolute;
+      bottom: 0px;
+      color: white;
+      text-shadow: 1px 1px 0px #000, 0 0 0 #fff, 1px 1px 0px #000;
+      width: 100%;
+      padding-bottom: 20px;
+      padding-top: 5px;
+      background: linear-gradient(to top, rgba(16, 16, 16, 0.6) 0%, rgba(16,16,16,0.20 ) 100%);
+    }
 
     img {
       width: 100%;
     }
 
-    .title {
-      color: white;
-      position: absolute;
-      bottom: 10px;
-      width: 100%;
+    .title, .credits {
       margin-left: 10px;
     }
 }
